--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@ aXiv, 2022 <br />
 </li>
 </ul>
 <ul>
-<li><p><b>UnifiedQA-v2</b> <br /> 
+<li><p><b>UnifiedQA-v2: Stronger Generalization via Broader Cross-Format Training</b> <br /> 
 Daniel Khashabi, Yeganeh Kordi and Hannaneh Hajishirzi  <br /> 
 aXiv, 2022 <br /> 
 <a href="https://arxiv.org/abs/2202.12359">Paper</a></p>
@@ -479,7 +479,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-02-27 17:34:35 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-02-27 17:41:41 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
