--- a/index.html
+++ b/index.html
@@ -132,6 +132,13 @@ ACL - Findings, 2022 <br />
 </li>
 </ul>
 <ul>
+<li><p><b>Learning to Solve Complex Tasks by Talking to Agents</b> <br /> 
+Tushar Khot, Kyle Richardson, Daniel Khashabi and Ashish Sabharwal <br /> 
+ACL - Findings, 2022 <br /> 
+<a href="https://arxiv.org/abs/2110.08542">Paper</a></p>
+</li>
+</ul>
+<ul>
 <li><p><b>Cross-Task Generalization via Natural Language Crowdsourcing Instructions</b> <br /> 
 Swaroop Mishra, Daniel Khashabi, Chitta Baral and Hannaneh Hajishirzi <br /> 
 ACL, 2022 <br /> 
@@ -157,13 +164,6 @@ aXiv, 2021 <br />
 Kelvin Luu, Daniel Khashabi, Suchin Gururangan, Karishma Mandyam and Noah A. Smith <br /> 
 arXiv, 2021 <br /> 
 <a href="https://arxiv.org/abs/2111.07408">Paper</a>, <a href="https://github.com/Kel-Lu/time-waits-for-no-one">Data</a></p>
-</li>
-</ul>
-<ul>
-<li><p><b>Learning to Solve Complex Tasks by Talking to Agents</b> <br /> 
-Tushar Khot, Kyle Richardson, Daniel Khashabi and Ashish Sabharwal <br /> 
-arXiv, 2021 <br /> 
-<a href="https://arxiv.org/abs/2110.08542">Paper</a></p>
 </li>
 </ul>
 <ul>
@@ -479,7 +479,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-02-27 17:41:41 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-03-01 16:01:56 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
