--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ AlphaGo may be the world champion at Go, but it can't solve any other problem!
 How can we instill machines with better <i>generality</i> that can cover a broader scope of tasks and abilities?  <br />
 <i>Papers:</i></p>
 <ul>
-<li><p><a href="https://arxiv.org/abs/2104.08773">Cross-Task Generalization via Natural Language Crowdsourcing Instructions</a> (arXiv preprint&rsquo;21)</p>
+<li><p><a href="https://arxiv.org/abs/2104.08773">Cross-Task Generalization via Natural Language Crowdsourcing Instructions</a> (ACL&rsquo;22)</p>
 </li>
 <li><p><a href="https://arxiv.org/abs/2005.00700">UnifiedQA: Crossing Format Boundaries With a Single QA System</a> (EMNLP-Findings&rsquo;20)</p>
 </li>
@@ -108,7 +108,7 @@ What are the algorithmic biases in our models and how can we alleviate them? How
 <li><p><b>COLD Decoding: Energy-based Constrained Text Generation with Langevin Dynamics</b> <br /> 
 Lianhui Qin, Sean Welleck, Daniel Khashabi and Yejin Choi  <br /> 
 aXiv, 2022 <br /> 
-<a href="https://arxiv.org/abs/2202.11705">Paper</a></p>
+<a href="https://arxiv.org/abs/2202.11705">Paper</a>, <a href="https://github.com/qkaren/COLD_decoding">Code</a></p>
 </li>
 </ul>
 <ul>
@@ -473,7 +473,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-03-04 13:50:51 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-03-07 16:52:24 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
