--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@ What are the algorithmic biases in our models and how can we alleviate them? How
 <li><p><b>COLD Decoding: Energy-based Constrained Text Generation with Langevin Dynamics</b> <br /> 
 Lianhui Qin, Sean Welleck, Daniel Khashabi and Yejin Choi  <br /> 
 aXiv, 2022 <br /> 
-<a href="https://arxiv.org/abs/2202.11705">Paper</a>, <a href="https://github.com/qkaren/COLD_decoding">Code</a></p>
+<a href="https://arxiv.org/abs/2202.11705">Paper</a>, <a href="https://github.com/qkaren/COLD_decoding">Code</a>, <a href="files/2022_decoding/sean_ifds2022_constrained.pdf">Slides</a></p>
 </li>
 </ul>
 <ul>
@@ -473,7 +473,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-03-07 16:52:24 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-03-11 16:12:25 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
