--- a/index.html
+++ b/index.html
@@ -105,6 +105,14 @@ What are the algorithmic biases in our models and how can we alleviate them? How
 <p><b>Disclaimer:</b> This material is presented to ensure the timely dissemination of scholarly works. Copyright and all rights therein are retained by authors or by other copyright holders. All persons copying this information are expected to adhere to the terms invoked by each author's copyright. <br /></p>
 <h4></h4>
 <ul>
+<li><p><b>Toward Automatic Discovery of Diverse Perspectives</b><br /> 
+Sihao Chen, Daniel Khashabi and Dan Roth  <br /> 
+Book chapter in &ldquo;Creating a More Transparent Internet: The Perspective Web&rdquo;  <br />
+Cambridge University Press, 2022 <br /> 
+[https:<i></i>books.google.com/books?hl=en&amp;lr=&amp;id=Ay9lEAAAQBAJ&amp;oi=fnd&amp;pg=PA193&amp;dq=info:n91V4Wf8jwYJ:scholar.google.com&amp;ots=ocz7xjuz0r&amp;sig=xtqoCGw1Er7vxFh8y3Bli10elxg</p>
+</li>
+</ul>
+<ul>
 <li><p><b>COLD Decoding: Energy-based Constrained Text Generation with Langevin Dynamics</b> <br /> 
 Lianhui Qin, Sean Welleck, Daniel Khashabi and Yejin Choi  <br /> 
 aXiv, 2022 <br /> 
@@ -119,17 +127,17 @@ aXiv, 2022 <br />
 </li>
 </ul>
 <ul>
-<li><p><b>Reframing Instructional Prompts to GPT<i>k</i>'s Language</b> <br /> 
-Swaroop Mishra, Daniel Khashabi, Chitta Baral, Yejin Choi and Hannaneh Hajishirzi <br /> 
-ACL - Findings, 2022 <br /> 
-<a href="https://arxiv.org/abs/2109.07830">Paper</a>, <a href="https://github.com/allenai/reframing">Code</a></p>
-</li>
-</ul>
-<ul>
 <li><p><b>Learning to Solve Complex Tasks by Talking to Agents</b> <br /> 
 Tushar Khot, Kyle Richardson, Daniel Khashabi and Ashish Sabharwal <br /> 
 ACL - Findings, 2022 <br /> 
 <a href="https://arxiv.org/abs/2110.08542">Paper</a></p>
+</li>
+</ul>
+<ul>
+<li><p><b>Reframing Instructional Prompts to GPT<i>k</i>'s Language</b> <br /> 
+Swaroop Mishra, Daniel Khashabi, Chitta Baral, Yejin Choi and Hannaneh Hajishirzi <br /> 
+ACL - Findings, 2022 <br /> 
+<a href="https://arxiv.org/abs/2109.07830">Paper</a>, <a href="https://github.com/allenai/reframing">Code</a></p>
 </li>
 </ul>
 <ul>
@@ -473,7 +481,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-03-11 16:12:25 PST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-03-28 16:11:15 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
