--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@ What are the algorithmic biases in our models and how can we alleviate them? How
 Sihao Chen, Daniel Khashabi and Dan Roth  <br /> 
 Book chapter in &ldquo;Creating a More Transparent Internet: The Perspective Web&rdquo;  <br />
 Cambridge University Press, 2022 <br /> 
-[https:<i></i>books.google.com/books?hl=en&amp;lr=&amp;id=Ay9lEAAAQBAJ&amp;oi=fnd&amp;pg=PA193&amp;dq=info:n91V4Wf8jwYJ:scholar.google.com&amp;ots=ocz7xjuz0r&amp;sig=xtqoCGw1Er7vxFh8y3Bli10elxg</p>
+<a href="https://books.google.com/books?hl=en&amp;lr=&amp;id=Ay9lEAAAQBAJ">eBook</a></p>
 </li>
 </ul>
 <ul>
@@ -481,7 +481,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-03-28 16:11:15 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-03-28 18:11:44 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
