--- a/index.html
+++ b/index.html
@@ -105,6 +105,27 @@ What are the algorithmic biases in our models and how can we alleviate them? How
 <p><b>Disclaimer:</b> This material is presented to ensure the timely dissemination of scholarly works. Copyright and all rights therein are retained by authors or by other copyright holders. All persons copying this information are expected to adhere to the terms invoked by each author's copyright. <br /></p>
 <h4></h4>
 <ul>
+<li><p><b>NeuroLogic A*esque Decoding: Constrained Text Generation with Lookahead Heuristics</b> <br /> 
+Ximing Lu, Sean Welleck, Peter West, Liwei Jiang, Jungo Kasai, Daniel Khashabi, Ronan Le Bras, Lianhui Qin, Youngjae Yu, Rowan Zellers, Noah A. Smith and Yejin Choi  <br /> 
+NAACL, 2022 <br /> 
+<a href="https://arxiv.org/abs/2112.08726">Paper</a></p>
+</li>
+</ul>
+<ul>
+<li><p><b>Promp Waywardness: The Curious Case of Discretized Interpretation of Continuous Prompts</b> <br /> 
+Daniel Khashabi, Shane Lyu, Sewon Min, Lianhui Qin, Kyle Richardson, Sameer Singh, Sean Welleck, Hannaneh Hajishirzi, Tushar Khot, Ashish Sabharwal and Yejin Choi  <br /> 
+NAACL, 2022 <br /> 
+<a href="https://arxiv.org/abs/2112.08348">Paper</a></p>
+</li>
+</ul>
+<ul>
+<li><p><b>Time Waits for No One! Analysis and Challenges of Temporal Misalignment</b> <br /> 
+Kelvin Luu, Daniel Khashabi, Suchin Gururangan, Karishma Mandyam and Noah A. Smith <br /> 
+NAACL, 2022 <br /> 
+<a href="https://arxiv.org/abs/2111.07408">Paper</a>, <a href="https://github.com/Kel-Lu/time-waits-for-no-one">Data</a></p>
+</li>
+</ul>
+<ul>
 <li><p><b>Toward Automatic Discovery of Diverse Perspectives</b><br /> 
 Sihao Chen, Daniel Khashabi and Dan Roth  <br /> 
 Book chapter in &ldquo;Creating a More Transparent Internet: The Perspective Web&rdquo;  <br />
@@ -145,27 +166,6 @@ ACL - Findings, 2022 <br />
 Swaroop Mishra, Daniel Khashabi, Chitta Baral and Hannaneh Hajishirzi <br /> 
 ACL, 2022 <br /> 
 <a href="https://arxiv.org/abs/2104.08773">Paper</a>, <a href="http://instructions.apps.allenai.org/">Data</a>, <a href="https://github.com/allenai/natural-instructions-expansion/">Data2</a>, <a href="files/2021_natural_insructions/ai2-talk-may-2021.pdf">Slides</a>, <a href="https://medium.com/ai2-blog/call-for-contributions-a-community-driven-repository-of-natural-language-instructions-9d3f24d5a9db">Blog</a></p>
-</li>
-</ul>
-<ul>
-<li><p><b>NeuroLogic A*esque Decoding: Constrained Text Generation with Lookahead Heuristics</b> <br /> 
-Ximing Lu, Sean Welleck, Peter West, Liwei Jiang, Jungo Kasai, Daniel Khashabi, Ronan Le Bras, Lianhui Qin, Youngjae Yu, Rowan Zellers, Noah A. Smith and Yejin Choi  <br /> 
-aXiv, 2021 <br /> 
-<a href="https://arxiv.org/abs/2112.08726">Paper</a></p>
-</li>
-</ul>
-<ul>
-<li><p><b>Promp Waywardness: The Curious Case of Discretized Interpretation of Continuous Prompts</b> <br /> 
-Daniel Khashabi, Shane Lyu, Sewon Min, Lianhui Qin, Kyle Richardson, Sameer Singh, Sean Welleck, Hannaneh Hajishirzi, Tushar Khot, Ashish Sabharwal and Yejin Choi  <br /> 
-aXiv, 2021 <br /> 
-<a href="https://arxiv.org/abs/2112.08348">Paper</a></p>
-</li>
-</ul>
-<ul>
-<li><p><b>Time Waits for No One! Analysis and Challenges of Temporal Misalignment</b> <br /> 
-Kelvin Luu, Daniel Khashabi, Suchin Gururangan, Karishma Mandyam and Noah A. Smith <br /> 
-arXiv, 2021 <br /> 
-<a href="https://arxiv.org/abs/2111.07408">Paper</a>, <a href="https://github.com/Kel-Lu/time-waits-for-no-one">Data</a></p>
 </li>
 </ul>
 <ul>
@@ -481,7 +481,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-03-28 18:11:44 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-04-07 18:13:59 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
