--- a/index.html
+++ b/index.html
@@ -443,6 +443,8 @@ BSc Thesis, Tehran Polytechnic, 2012 (in Persian.) <br />
 </ul>
 <p><h2 id="talks">Select Talks</h2></p>
 <ul>
+<li><p>Johns Jopkins, <a href="files/2022_jhu_talk/jhu_talk-feb-2022-split.pdf">The Quest Toward Generality in Natural Language Understanding</a>, 2022.</p>
+</li>
 <li><p>Google AI, <a href="files/2021_google_talk/google-talk-march-2021.pdf">Broadening the Scope of Machine Comprehension</a>, 2021.
 </p>
 </li>
@@ -481,7 +483,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-04-07 18:13:59 EDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-04-14 12:03:07 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
