--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@ NAACL, 2022 <br />
 <li><p><b>Promp Waywardness: The Curious Case of Discretized Interpretation of Continuous Prompts</b> <br /> 
 Daniel Khashabi, Shane Lyu, Sewon Min, Lianhui Qin, Kyle Richardson, Sameer Singh, Sean Welleck, Hannaneh Hajishirzi, Tushar Khot, Ashish Sabharwal and Yejin Choi  <br /> 
 NAACL, 2022 <br /> 
-<a href="https://arxiv.org/abs/2112.08348">Paper</a></p>
+<a href="https://arxiv.org/abs/2112.08348">Paper</a>, <a href="files/2022_waywardness/waywardness-2022-ai2.pptx">Slides</a></p>
 </li>
 </ul>
 <ul>
@@ -490,7 +490,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-04-18 18:45:07 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-04-22 13:36:53 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
