--- a/index.html
+++ b/index.html
@@ -155,10 +155,10 @@ aXiv, 2022 <br />
 </li>
 </ul>
 <ul>
-<li><p><b>Learning to Solve Complex Tasks by Talking to Agents</b> <br /> 
+<li><p><b>Hey AI, Can You Solve Complex Tasks by Talking to Agents?</b> <br /> 
 Tushar Khot, Kyle Richardson, Daniel Khashabi and Ashish Sabharwal <br /> 
 ACL - Findings, 2022 <br /> 
-<a href="https://arxiv.org/abs/2110.08542">Paper</a></p>
+<a href="https://arxiv.org/abs/2110.08542">Paper</a>, <a href="files/2022_commaqa/CommaQA_ACL_Presentation_v2.pptx">Slides</a>, <a href="files/2022_commaqa/CommaQA_ACL_Poster_v2.pdf">Poster</a></p>
 </li>
 </ul>
 <ul>
@@ -490,7 +490,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-04-22 13:36:53 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-04-25 17:10:30 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
