--- a/index.html
+++ b/index.html
@@ -25,23 +25,12 @@
 <td align="left"><p>Daniel Khashabi (<span lang="ko" xml:lang="ko">دانیال خشابی</span>) <br />
 Young Investigator <br />
 Allen Institute for Artificial Intelligence  <br />
-2157 N Northlake Way Suite 110, Seattle, WA 98103 <br /><br /></p>
-<ul>
-<li><p><b>E-mail:</b> danielk  ¯\_(ツ)_/¯  allenai.org
-</p>
-</li>
-<li><p><a href="CV_daniel.pdf">[Resume]</a> </p>
-</li>
-<li><p><a href="https://scholar.google.com/citations?user=pK2kQvgAAAAJ&amp;hl=en">[Google Scholar]</a></p>
-</li>
-<li><p><a href="https://www.semanticscholar.org/author/Daniel-Khashabi/1783281">[Semantic Scholar]</a></p>
-</li>
-</ul>
-</td></tr></table>
-<p><h2 id="about">About</h2>
-I am a post-doctoral researcher  at Allen Institute for AI, Seattle. I am affiliated with the <a href="https://mosaic.allenai.org/">Mosaic</a> team and I frequently collaborate with other teams like <a href="https://allennlp.org/">AllenNLP</a> and <a href="https://allenai.org/aristo">Aristo</a>. 
+2157 N Northlake Way Suite 110, Seattle, WA 98103 <br /></p>
+<p><a href="danielk¯\_(ツ)_/¯allenai.org">Email</a> - <a href="CV_daniel.pdf">Resume</a> - <a href="https://scholar.google.com/citations?user=pK2kQvgAAAAJ&amp;hl=en">Google Scholar</a> - <a href="https://www.semanticscholar.org/author/Daniel-Khashabi/1783281">Semantic Scholar</a></p>
+<p>I am a post-doctoral researcher  at Allen Institute for AI, Seattle. I am affiliated with the <a href="https://mosaic.allenai.org/">Mosaic</a> team and I frequently collaborate with other teams like <a href="https://allennlp.org/">AllenNLP</a> and <a href="https://allenai.org/aristo">Aristo</a>. 
 Prior to this, I was a doctoral student at Computer and Information Sciences at the University of Pennsylvania (2017-2019) and at the University of Illinois, Urbana-Champaign (2012-2016), under <a href="https://www.cis.upenn.edu/~danroth/">Prof. Dan Roth</a>. 
-I have a bachelor's degree from Amirkabir University of Technology, Tehran Polytechnic (2008-2012). I was greatly fortunate to work with <a href="https://scholar.google.com/citations?user=tLX51p0AAAAJ&amp;hl=en">Prof. Hamid Sheikhzadeh</a> during my undergraduate studies.  </p>
+I have a bachelor's degree from Amirkabir University of Technology, Tehran Polytechnic (2008-2012). I was greatly fortunate to work with <a href="https://scholar.google.com/citations?user=tLX51p0AAAAJ&amp;hl=en">Prof. Hamid Sheikhzadeh</a> during my undergraduate studies. <br /></p>
+</td></tr></table>
 <p><h2 id="themes">Research Themes</h2></p>
 <p>My research focuses on the computational foundations of <i>intelligent behavior</i>, through the lens of <i>natural language</i>. 
 My goal is to explore the different ways in which we can develop and evaluate systems that understand and reason with (and about) natural language in different contexts. 
@@ -490,7 +479,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-04-25 17:10:30 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-05-09 14:13:58 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
