--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
 <tr valign="top">
 <td id="layout-menu">
 <div class="menu-category">Daniel Khashabi</div>
+<div class="menu-item"><a href="danielk¯\_(ツ)_/¯allenai.org">Contact&nbsp;email</a></div>
 <div class="menu-item"><a href="CV_daniel.pdf">CV</a></div>
-<div class="menu-item"><a href="index.html#themes">Themes</a></div>
+<div class="menu-item"><a href="https://scholar.google.com/citations?user=pK2kQvgAAAAJ&hl=en">Google&nbsp;Scholar</a></div>
+<div class="menu-item"><a href="https://www.semanticscholar.org/author/Daniel-Khashabi/1783281 Semantic Scholar">Semantic&nbsp;Scholar</a></div>
+<div class="menu-item"><a href="index.html#themes">Research&nbsp;Themes</a></div>
 <div class="menu-item"><a href="index.html#publication">Publication</a></div>
 <div class="menu-item"><a href="index.html#talks">Talks/Slides</a></div>
 <div class="menu-item"><a href="index.html#teaching">Teaching</a></div>
@@ -26,7 +29,6 @@
 Young Investigator <br />
 Allen Institute for Artificial Intelligence  <br />
 2157 N Northlake Way Suite 110, Seattle, WA 98103 <br /></p>
-<p><a href="danielk¯\_(ツ)_/¯allenai.org">Email</a> - <a href="CV_daniel.pdf">Resume</a> - <a href="https://scholar.google.com/citations?user=pK2kQvgAAAAJ&amp;hl=en">Google Scholar</a> - <a href="https://www.semanticscholar.org/author/Daniel-Khashabi/1783281">Semantic Scholar</a></p>
 <p>I am a post-doctoral researcher  at Allen Institute for AI, Seattle. I am affiliated with the <a href="https://mosaic.allenai.org/">Mosaic</a> team and I frequently collaborate with other teams like <a href="https://allennlp.org/">AllenNLP</a> and <a href="https://allenai.org/aristo">Aristo</a>. 
 Prior to this, I was a doctoral student at Computer and Information Sciences at the University of Pennsylvania (2017-2019) and at the University of Illinois, Urbana-Champaign (2012-2016), under <a href="https://www.cis.upenn.edu/~danroth/">Prof. Dan Roth</a>. 
 I have a bachelor's degree from Amirkabir University of Technology, Tehran Polytechnic (2008-2012). I was greatly fortunate to work with <a href="https://scholar.google.com/citations?user=tLX51p0AAAAJ&amp;hl=en">Prof. Hamid Sheikhzadeh</a> during my undergraduate studies. <br /></p>
@@ -479,7 +481,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-05-09 14:13:58 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-05-09 14:22:48 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
