--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@ How can we instill machines with better <i>generality</i> that can cover a broad
 </li>
 </ul>
 <ul>
-<li><p><b>Arming models with general-purpose reasoning paradigms:</b> 
-Humans resort to &ldquo;reasons&rdquo; to explain themselves and convince others. 
-How can we enable machines to communicate the <i>reasons</i> behind their findings and the gaps in their knowledge, in a broad-ranging spectrum of tasks? <br />
+<li><p><b>Arming models with &ldquo;reasoning&rdquo;:</b> 
+I view &ldquo;reasoning&rdquo; as the process of explaining or justifying decisions via &ldquo;reasons&rdquo;. 
+How can we enable machines to communicate via <i>reasons</i>, for a broad-ranging spectrum of tasks? <br />
 <i>Papers:</i></p>
 <ul>
 <li><p><a href="https://arxiv.org/abs/2101.02235">Did Aristotle Use a Laptop? A Question Answering Benchmark with Implicit Reasoning Strategies</a> (TACL&rsquo;21)</p>
@@ -67,8 +67,8 @@ How can we enable machines to communicate the <i>reasons</i> behind their findin
 </li>
 </ul>
 <ul>
-<li><p><b>Generality enabled by the representation of task-independent “incidental” signals:</b> 
-How can we utilize cheap signals available in the wild (web data or physical environment) to enrich representations that support stronger model generalization? <br />
+<li><p><b>Generality enabled by task-independent self-supervised representations:</b> 
+How can we build representations that utilize cheap signals available in-the-wild (web data or physical environment) and support better model generalization? <br />
 <i>Papers:</i></p>
 <ul>
 <li><p><a href="https://arxiv.org/abs/2005.04304">Temporal Common Sense Acquisition with Minimal Supervision</a> (ACL&rsquo;20)</p>
@@ -481,7 +481,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-05-11 10:29:55 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-05-11 10:38:30 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
