--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ I mostly identify with <i>natural language processing</i> (ACL, NAACL, EMNLP) an
 <ul>
 <li><p><b>Formulating and tackling broader problems:</b> 
 AlphaGo may be the world champion at Go, but it can't solve any other problem! 
-How can we instill machines with better <a href="/generality/">/generality/</a>(http:<i></i>jmc.stanford.edu<i>articles</i>generality.html) that can cover a broader scope of tasks and abilities?  <br />
+How can we instill machines with better <i><a href="generality">generality</a>(http:</i><i>jmc.stanford.edu</i>articles<i>generality.html)</i> that can cover a broader scope of tasks and abilities?  <br />
 </p>
 <ul>
 <li><p><a href="https://arxiv.org/abs/2104.08773">Cross-Task Generalization via Natural Language Crowdsourcing Instructions</a> (ACL&rsquo;22)</p>
@@ -481,7 +481,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-05-11 11:09:52 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-05-11 11:16:37 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
