--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@ My goal is to explore the different ways in which we can develop and evaluate sy
 I mostly identify with <i>natural language processing</i> (ACL, NAACL, EMNLP) and <i>artificial intelligence</i> communities (AAAI, IJCAI) and, to some extent, with the <i>machine learning</i> community (NeurIPS, ICML).</p>
 <p>Here are several themes I am interested in: </p>
 <ul>
-<li><p><b>Formulating and tackling broader problems:</b> 
+<li><p><b>Generality<a href="http://jmc.stanford.edu/articles/generality/generality.pdf">*</a>:</b> 
 AlphaGo may be the world champion at Go, but it can't solve any other problem! 
-How can we instill machines with better &ldquo;<a href="http://jmc.stanford.edu/articles/generality/generality.pdf">generality</a>&rdquo; (i.e., ability to address a broader scope of tasks and abilities)?  <br />
+How can we incentivize building models that can address a broader scope of tasks and abilities?  <br />
 </p>
 <ul>
 <li><p><a href="https://arxiv.org/abs/2104.08773">Cross-Task Generalization via Natural Language Crowdsourcing Instructions</a> (ACL&rsquo;22)</p>
@@ -53,8 +53,8 @@ How can we instill machines with better &ldquo;<a href="http://jmc.stanford.edu/
 </li>
 </ul>
 <ul>
-<li><p><b>Generality enabled by task-independent self-supervised representations:</b> 
-How can we build representations that utilize cheap signals available in-the-wild (web data or physical environment) and support better model generalization? <br />
+<li><p><b>Self-supervised representations:</b> 
+How can we build task-independent representations that utilize cheap signals available in-the-wild (web data or physical environment) and support better model generalization? <br />
 </p>
 <ul>
 <li><p><a href="https://arxiv.org/abs/2005.04304">Temporal Common Sense Acquisition with Minimal Supervision</a> (ACL&rsquo;20)</p>
@@ -66,7 +66,7 @@ How can we build representations that utilize cheap signals available in-the-wil
 </li>
 </ul>
 <ul>
-<li><p><b>Arming models with &ldquo;reasoning&rdquo;:</b> 
+<li><p><b>Rreasoning:</b> 
 I view &ldquo;reasoning&rdquo; as the process of explaining or justifying decisions via &ldquo;reasons&rdquo;. 
 How can we enable machines to communicate via <i>reasons</i>, for a broad-ranging spectrum of tasks? <br />
 </p>
@@ -481,7 +481,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-05-11 11:19:03 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-05-12 20:50:27 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
