--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@ I mostly identify with <i>natural language processing</i> (ACL, NAACL, EMNLP) an
 <p>Here are several themes I am interested in: </p>
 <ul>
 <li><p><b>Generality<a href="http://jmc.stanford.edu/articles/generality/generality.pdf">*</a>:</b> 
-AlphaGo may be the world champion at Go, but it can't solve any other problem! 
+AlphaGo may be the world champion at Go, although it can't solve any other problem! 
 How can we incentivize building models that can address a broader scope of tasks and abilities?  <br />
 </p>
 <ul>
@@ -481,7 +481,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-05-12 20:50:27 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-05-12 20:53:03 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
