--- a/index.html
+++ b/index.html
@@ -41,55 +41,38 @@ I mostly identify with <i>natural language processing</i> (ACL, NAACL, EMNLP) an
 <ul>
 <li><p><b>Generality<a href="http://jmc.stanford.edu/articles/generality/generality.pdf">*</a>:</b> 
 AlphaGo may be the world champion at Go, although it can't solve any other problem! 
-How can we incentivize building models that can address a broader scope of tasks and abilities?  <br />
-</p>
-<ul>
-<li><p><a href="https://arxiv.org/abs/2104.08773">Cross-Task Generalization via Natural Language Crowdsourcing Instructions</a> (ACL&rsquo;22)</p>
-</li>
-<li><p><a href="https://arxiv.org/abs/2005.00700">UnifiedQA: Crossing Format Boundaries With a Single QA System</a> (EMNLP-Findings&rsquo;20)</p>
-</li>
-</ul>
+How can we incentivize building models that can address a broader scope of tasks and abilities?  (papers: <a href="https://arxiv.org/abs/2104.08773">ACL&rsquo;22</a>, <a href="https://arxiv.org/abs/2005.00700">EMNLP-Findings&rsquo;20</a>)
 
+
+</p>
 </li>
 </ul>
 <ul>
 <li><p><b>Self-supervised representations:</b> 
-How can we build task-independent representations that utilize cheap signals available in-the-wild (web data or physical environment) and support better model generalization? <br />
-</p>
-<ul>
-<li><p><a href="https://arxiv.org/abs/2005.04304">Temporal Common Sense Acquisition with Minimal Supervision</a> (ACL&rsquo;20)</p>
-</li>
-<li><p><a href="https://arxiv.org/abs/1907.03228">Zero-Shot Open Entity Typing as Type-Compatible Grounding</a> (EMNLP&rsquo;18)</p>
-</li>
-</ul>
+How can we build task-independent representations that utilize cheap signals available in-the-wild (web data or physical environment) and support better model generalization? (papers: <a href="https://arxiv.org/abs/2005.04304">ACL&rsquo;20</a>, <a href="https://arxiv.org/abs/1907.03228">EMNLP&rsquo;18</a>)
 
+
+
+</p>
 </li>
 </ul>
 <ul>
 <li><p><b>Rreasoning:</b> 
 I view &ldquo;reasoning&rdquo; as the process of explaining or justifying decisions via &ldquo;reasons&rdquo;. 
-How can we enable machines to communicate via <i>reasons</i>, for a broad-ranging spectrum of tasks? <br />
-</p>
-<ul>
-<li><p><a href="https://arxiv.org/abs/2101.02235">Did Aristotle Use a Laptop? A Question Answering Benchmark with Implicit Reasoning Strategies</a> (TACL&rsquo;21)</p>
-</li>
-<li><p><a href="https://arxiv.org/abs/2009.00751">Text Modular Networks: Learning to Decompose Tasks in the Language of Existing Models</a> (NAACL&rsquo;21)</p>
-</li>
-</ul>
+How can we enable machines to communicate via <i>reasons</i>, for a broad-ranging spectrum of tasks? (papers: <a href="https://arxiv.org/abs/2009.00751">TACL&rsquo;21</a>, <a href="https://arxiv.org/abs/2101.02235">NAACL&rsquo;21</a>)
 
+
+
+</p>
 </li>
 </ul>
 <ul>
 <li><p><b>AI + Society:</b> 
-What are the algorithmic biases in our models and how can we alleviate them? How do the models contribute to echo chambers (and our growing socio-political divisions) and how can address these issues? <br />
-</p>
-<ul>
-<li><p><a href="https://arxiv.org/abs/2010.02428">UnQovering Stereotyping Biases via Underspecified Questions</a> (EMNLP&rsquo;20)</p>
-</li>
-<li><p><a href="https://arxiv.org/abs/1906.03538">Seeing Things from a Different Angle: Discovering Diverse Perspectives about Claims</a> (NAACL&rsquo;19)</p>
-</li>
-</ul>
+What are the algorithmic biases in our models and how can we alleviate them? How do the models contribute to echo chambers (and our growing socio-political divisions) and how can address these issues? (papers:  <a href="https://arxiv.org/abs/2010.02428">EMNLP&rsquo;20</a>, <a href="https://arxiv.org/abs/1906.03538">NAACL&rsquo;19</a>)
 
+
+
+</p>
 </li>
 </ul>
 <p><h2 id="publication">Publication</h2></p>
@@ -481,7 +464,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-05-12 20:53:03 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-05-12 22:46:16 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
