--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ My goal is to explore the different ways in which we can develop and evaluate sy
 I mostly identify with <i>natural language processing</i> (ACL, NAACL, EMNLP) and <i>artificial intelligence</i> communities (AAAI, IJCAI) and, to some extent, with the <i>machine learning</i> community (NeurIPS, ICML).</p>
 <p>Here are several themes I am interested in: </p>
 <ul>
-<li><p><b>Generality<a href="http://jmc.stanford.edu/articles/generality/generality.pdf">*</a>:</b> 
+<li><p><b>Generalism<a href="http://jmc.stanford.edu/articles/generality/generality.pdf">*</a>:</b> 
 AlphaGo may be the world champion at Go, although it can't solve any other problem! 
 How can we incentivize building models that can address a broader scope of tasks and abilities?  (papers: <a href="https://arxiv.org/abs/2104.08773">ACL&rsquo;22</a>, <a href="https://arxiv.org/abs/2005.00700">EMNLP-Findings&rsquo;20</a>)
 
@@ -48,7 +48,7 @@ How can we incentivize building models that can address a broader scope of tasks
 </li>
 </ul>
 <ul>
-<li><p><b>Self-supervised representations:</b> 
+<li><p><b>Self-supervised learning:</b> 
 How can we build task-independent representations that utilize cheap signals available in-the-wild (web data or physical environment) and support better model generalization? (papers: <a href="https://arxiv.org/abs/2005.04304">ACL&rsquo;20</a>, <a href="https://arxiv.org/abs/1907.03228">EMNLP&rsquo;18</a>)
 
 
@@ -464,7 +464,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-05-12 22:46:16 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-05-13 11:25:41 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
