--- a/index.html
+++ b/index.html
@@ -11,11 +11,6 @@
 <table summary="Table for page layout." id="tlayout">
 <tr valign="top">
 <td id="layout-menu">
-<div class="menu-category">Daniel Khashabi</div>
-<div class="menu-item"><a href="danielk¯\_(ツ)_/¯allenai.org">Contact&nbsp;email</a></div>
-<div class="menu-item"><a href="CV_daniel.pdf">CV</a></div>
-<div class="menu-item"><a href="https://scholar.google.com/citations?user=pK2kQvgAAAAJ&hl=en">Google&nbsp;Scholar</a></div>
-<div class="menu-item"><a href="https://www.semanticscholar.org/author/Daniel-Khashabi/1783281 Semantic Scholar">Semantic&nbsp;Scholar</a></div>
 <div class="menu-item"><a href="index.html#themes">Research&nbsp;Themes</a></div>
 <div class="menu-item"><a href="index.html#publication">Publication</a></div>
 <div class="menu-item"><a href="index.html#talks">Talks/Slides</a></div>
@@ -28,7 +23,7 @@
 <td align="left"><p>Daniel Khashabi (<span lang="ko" xml:lang="ko">دانیال خشابی</span>) <br />
 Young Investigator <br />
 Allen Institute for Artificial Intelligence  <br />
-2157 N Northlake Way Suite 110, Seattle, WA 98103 <br /></p>
+2157 N Northlake Way Suite 110, Seattle, WA 98103 | <tt>danielk¯\_(ツ)_/¯allenai.org</tt> <br /></p>
 <p>I am a post-doctoral researcher  at Allen Institute for AI, Seattle. I am affiliated with the <a href="https://mosaic.allenai.org/">Mosaic</a> team and I frequently collaborate with other teams like <a href="https://allennlp.org/">AllenNLP</a> and <a href="https://allenai.org/aristo">Aristo</a>. 
 Prior to this, I was a doctoral student at Computer and Information Sciences at the University of Pennsylvania (2017-2019) and at the University of Illinois, Urbana-Champaign (2012-2016), under <a href="https://www.cis.upenn.edu/~danroth/">Prof. Dan Roth</a>. 
 I got my B.Sc. from Tehran Polytechnic (2008-2012) where I was greatly fortunate to work with <a href="https://scholar.google.com/citations?user=tLX51p0AAAAJ&amp;hl=en">Prof. Hamid Sheikhzadeh</a>. <br /></p>
@@ -464,7 +459,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-05-13 16:15:24 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-05-13 23:41:32 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
