--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ How can we build task-independent representations that utilize cheap signals ava
 </li>
 </ul>
 <ul>
-<li><p><b>Rreasoning:</b> 
+<li><p><b>Reasoning:</b> 
 I view &ldquo;reasoning&rdquo; as the process of explaining or justifying decisions via &ldquo;reasons&rdquo;. 
 How can we enable machines to communicate via <i>reasons</i>, for a broad-ranging spectrum of tasks? (papers: <a href="https://arxiv.org/abs/2009.00751">TACL&rsquo;21</a>, <a href="https://arxiv.org/abs/2101.02235">NAACL&rsquo;21</a>)
 
@@ -459,7 +459,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-05-13 23:41:32 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-05-15 09:16:31 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
