--- a/index.html
+++ b/index.html
@@ -436,11 +436,11 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 <ul>
 <li><p>Guest Lecturer: CS446 (Machine Learning) @ UPenn, Spring 2018. </p>
 </li>
-<li><p>Guest Lecturer: CS446 (Machine Learning) @ UPenn, Fall 2018: <a href="https://www.youtube.com/watch?v=9AbMmCrNeEQ">Lecture 1</a> <a href="https://www.youtube.com/watch?v=cznV5pRsv_A">Lecture 2</a></p>
+<li><p>Guest Lecturer: CS446 (Machine Learning) @ UPenn, Fall 2018.</p>
 </li>
-<li><p>Guest Lecturer: CS446 (Machine Learning) @ UIUC, Spring 2016: <a href="https://www.youtube.com/watch?v=oNOY2F2qcsk">Lecture 1</a> </p>
+<li><p>Guest Lecturer: CS446 (Machine Learning) @ UIUC, Spring 2016.</p>
 </li>
-<li><p>Guest Lecturer: CS446 (Machine Learning) @ UIUC, Fall 2015: <a href="files/2015_cs446_machine_learning/">files</a> <a href="https://www.youtube.com/watch?v=hYwGsu50Ee4&amp;t=4s">Lecture 1</a> <a href="https://www.youtube.com/watch?v=Apxp1UfsTLk">Lecture 2</a></p>
+<li><p>Guest Lecturer: CS446 (Machine Learning) @ UIUC, Fall 2015.</p>
 </li>
 <li><p>Teaching Assistant: <a href="http://l2r.cs.uiuc.edu/~danr/Teaching/CS446-15/">CS446: Machine Learning</a>,  Dan Roth, UIUC (Fall, 2015).</p>
 </li>
@@ -448,18 +448,15 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </li>
 <li><p>Teaching Assistant: <a href="http://courses.engr.illinois.edu/cs473/sp2013/">CS473: Fundamental Algorithms</a>,  Sariel Har-Peled and Alexandra Kolla, UIUC (Spring, 2013).</p>
 </li>
-<li><p>Teaching Assistant: <a href="http://ele.aut.ac.ir/~gholamrezamoradi/stat/">&ldquo;Probability and Statistics&rdquo;</a>, Instructor: Dr. Gholamreza Moradi, AUT (Spring, 2012).</p>
-</li>
-<li><p>Teaching Assistant: &ldquo;Digital Signal Processing&rdquo;, Instructor: Dr. Hamid Sheikhzadeh, AUT (Spring 2012). </p>
-</li>
-<li><p>Teaching Assistant: &ldquo;C++ II : Numerical C++ Programming&rdquo;, Instructor: Dr.Bahram Taheri, Joint program with University of Birmingham and AUT (Fall, 2011). <br /></p>
-</li>
-<li><p>Teaching Assistant: &ldquo;Introduction to Computers and Programming(C++)&rdquo;, Instructor: Dr.Hassan Taheri (Spring, 2011). <br /></p>
+<li><p>Teaching Assistant: <a href="http://ele.aut.ac.ir/~gholamrezamoradi/stat/">&ldquo;Probability and Statistics&rdquo;</a>, Instructor: Dr. Gholamreza Moradi, AUT (Spring, 2012).
+
+
+</p>
 </li>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-05-15 09:16:31 PDT, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-05-22 08:10:03 IST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
