--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <td align="left"><p>Daniel Khashabi (<span lang="ko" xml:lang="ko">دانیال خشابی</span>) <br />
 Young Investigator <br />
 Allen Institute for Artificial Intelligence  <br />
-2157 N Northlake Way Suite 110, Seattle, WA 98103 | <tt>danielk¯\_(ツ)_/¯allenai.org</tt> <br /></p>
+2157 N Northlake Way Suite 110, Seattle, WA 98103 | Email: <tt>danielk ¯\_(ツ)_/¯ allenai.org</tt> <br /></p>
 <p>I am a post-doctoral researcher  at Allen Institute for AI, Seattle. I am affiliated with the <a href="https://mosaic.allenai.org/">Mosaic</a> team and I frequently collaborate with other teams like <a href="https://allennlp.org/">AllenNLP</a> and <a href="https://allenai.org/aristo">Aristo</a>. 
 Prior to this, I was a doctoral student at Computer and Information Sciences at the University of Pennsylvania (2017-2019) and at the University of Illinois, Urbana-Champaign (2012-2016), under <a href="https://www.cis.upenn.edu/~danroth/">Prof. Dan Roth</a>. 
 I got my B.Sc. from Tehran Polytechnic (2008-2012) where I was greatly fortunate to work with <a href="https://scholar.google.com/citations?user=tLX51p0AAAAJ&amp;hl=en">Prof. Hamid Sheikhzadeh</a>. <br /></p>
@@ -432,31 +432,9 @@ BSc Thesis, Tehran Polytechnic, 2012 (in Persian.) <br />
 Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </li>
 </ul>
-<p><h2 id="teaching">Teaching</h2></p>
-<ul>
-<li><p>Guest Lecturer: CS446 (Machine Learning) @ UPenn, Spring 2018. </p>
-</li>
-<li><p>Guest Lecturer: CS446 (Machine Learning) @ UPenn, Fall 2018.</p>
-</li>
-<li><p>Guest Lecturer: CS446 (Machine Learning) @ UIUC, Spring 2016.</p>
-</li>
-<li><p>Guest Lecturer: CS446 (Machine Learning) @ UIUC, Fall 2015.</p>
-</li>
-<li><p>Teaching Assistant: <a href="http://l2r.cs.uiuc.edu/~danr/Teaching/CS446-15/">CS446: Machine Learning</a>,  Dan Roth, UIUC (Fall, 2015).</p>
-</li>
-<li><p>Teaching Assistant: <a href="http://courses.engr.illinois.edu/cs473/fa2013/">CS473: Fundamental Algorithms</a>, Jeff Erikson, UIUC (Fall, 2013).</p>
-</li>
-<li><p>Teaching Assistant: <a href="http://courses.engr.illinois.edu/cs473/sp2013/">CS473: Fundamental Algorithms</a>,  Sariel Har-Peled and Alexandra Kolla, UIUC (Spring, 2013).</p>
-</li>
-<li><p>Teaching Assistant: <a href="http://ele.aut.ac.ir/~gholamrezamoradi/stat/">&ldquo;Probability and Statistics&rdquo;</a>, Instructor: Dr. Gholamreza Moradi, AUT (Spring, 2012).
-
-
-</p>
-</li>
-</ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-05-22 08:10:03 IST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-05-22 08:13:54 IST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
