--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ How can we build task-independent representations that utilize cheap signals ava
 </ul>
 <ul>
 <li><p><b>Reasoning:</b> 
-I view &ldquo;reasoning&rdquo; as the process of explaining or justifying decisions via &ldquo;reasons&rdquo;. 
+I view &ldquo;reasoning&rdquo; as the process of using &ldquo;reasons&rdquo; for explaining or justifying decisions. 
 How can we enable machines to communicate via <i>reasons</i>, for a broad-ranging spectrum of tasks? (papers: <a href="https://arxiv.org/abs/2009.00751">TACL&rsquo;21</a>, <a href="https://arxiv.org/abs/2101.02235">NAACL&rsquo;21</a>)
 
 
@@ -434,7 +434,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-05-22 08:13:54 IST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-05-24 09:41:14 IST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
