--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@ How can we enable machines to communicate via <i>reasons</i>, for a broad-rangin
 </li>
 </ul>
 <ul>
-<li><p><b>AI + Society:</b> 
-What are the algorithmic biases in our models and how can we alleviate them? How do the models contribute to echo chambers (and our growing socio-political divisions) and how can address these issues? (papers:  <a href="https://arxiv.org/abs/2010.02428">EMNLP&rsquo;20</a>, <a href="https://arxiv.org/abs/1906.03538">NAACL&rsquo;19</a>)
+<li><p><b>Human-AI interaction:</b> The increased deployment of AI in human-facing applications requires addressing many challenges: 
+How can we bake in transparency in models so human operators can contextualize system output? Can we make such transparency into a truly democratic oversight of systems and their algorithmic biases?  Can we build systems that can recourse when there is harm to those that are marginalized? Can we build systems that reduce our socio-political divisions? (papers:  <a href="https://arxiv.org/abs/2010.02428">EMNLP&rsquo;20</a>, <a href="https://arxiv.org/abs/1906.03538">NAACL&rsquo;19</a>)
 
 
 
@@ -434,7 +434,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-05-24 09:41:14 IST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-05-25 22:18:33 IST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
