--- a/index.html
+++ b/index.html
@@ -74,6 +74,13 @@ How can we bake in transparency in models so human operators can contextualize s
 <p><b>Disclaimer:</b> This material is presented to ensure the timely dissemination of scholarly works. Copyright and all rights therein are retained by authors or by other copyright holders. All persons copying this information are expected to adhere to the terms invoked by each author's copyright. <br /></p>
 <h4></h4>
 <ul>
+<li><p><b>ProsocialDialog: A Prosocial Backbone for Conversational Agents</b> <br /> 
+Hyunwoo Kim, Youngjae Yu, Liwei Jiang, Ximing Lu, Daniel Khashabi, Gunhee Kim, Yejin Choi and Maarten Sap  <br /> 
+arXiv, 2022 <br /> 
+<a href="https://arxiv.org/abs/2205.12688">Paper</a>, <a href="https://github.com/skywalker023/prosocial-dialog/">Data</a></p>
+</li>
+</ul>
+<ul>
 <li><p><b>Benchmarking Generalization via In-Context Instructions on 1,600+ Language Tasks</b> <br /> 
 Yizhong Wang et al.  <br /> 
 arXiv, 2022 <br /> 
@@ -434,7 +441,7 @@ Global Reasoning over Semantic Abstractions</a>, 2018.</p>
 </ul>
 <div id="footer">
 <div id="footer-text">
-Page generated 2022-05-25 22:18:33 IST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
+Page generated 2022-05-26 08:56:21 IST, by <a href="http://jemdoc.jaboc.net/">jemdoc</a>.
 </div>
 </div>
 </td>
